--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1 class="name">Svitlana Stefanenko</h1>
 
                 <p class="description">
-                    Психологічні консультації онлайн, офлайн.
+                    Індивідуальні та групові консультації. Допомога найменшим.
                 </p>
 
             </div>
@@ -35,8 +35,14 @@
             <!-- Education -->
             <div>
                 <h3>Education</h3>
-                <h4>Lviv Polytechnic National University</h4>
-                <p>September 2006 - December 2011 | Ukraine</p>
+                <h4>Тернопільський осередок УСП</h4>
+                <h5>Дитяча психотерапія</h5>
+                <p>September 2007 - September 2010 | Ternopil</p>
+                <h4>УДПУ ім. Павла Тичини</h4>
+                <h5>Магістр педагогіки-психології</h5>
+                <p>June 2002 - June 2003 | Uman</p>
+                <h4>Київський проект УСП, 2</h4>
+                <h5>Груповий психоаналіз</h5>
             </div>
 
         </div>
